fix datepicker overflow in filter section

--- a/src/pages/DataLibrary/components/PACSLookup/pacs-lookup.scss
+++ b/src/pages/DataLibrary/components/PACSLookup/pacs-lookup.scss
@@ -33,6 +33,9 @@
     .pf-l-split {
       width: 100%;
     }
+    .filters-date-picker {
+      width: 100%;
+    }
   }
 }
 
